Limit to one configuration
