# apiserver/api_configuration.go
@@ -67,15 +67,10 @@ func (c *ConfigurationAPIController) Routes() Routes {
 			"/v1/configs",
 			c.GetConfigurations,
 		},
-		"PostConfiguration": Route{
-			strings.ToUpper("Post"),
-			"/v1/configs",
-			c.PostConfiguration,
-		},
-		"PutConfigurationById": Route{
+		"PutConfiguration": Route{
 			strings.ToUpper("Put"),
-			"/v1/configs/{config-id}",
-			c.PutConfigurationById,
+			"/v1/configs",
+			c.PutConfiguration,
 		},
 	}
 }
@@ -134,8 +129,8 @@ func (c *ConfigurationAPIController) GetConfigurations(w http.ResponseWriter, r 
 	EncodeJSONResponse(result.Body, &result.Code, w)
 }
 
-// PostConfiguration - Creates a configuration
-func (c *ConfigurationAPIController) PostConfiguration(w http.ResponseWriter, r *http.Request) {
+// PutConfiguration - Updates a configuration
+func (c *ConfigurationAPIController) PutConfiguration(w http.ResponseWriter, r *http.Request) {
 	configurationParam := Configuration{}
 	d := json.NewDecoder(r.Body)
 	d.DisallowUnknownFields()
@@ -151,43 +146,7 @@ func (c *ConfigurationAPIController) PostConfiguration(w http.ResponseWriter, r 
 		c.errorHandler(w, r, err, nil)
 		return
 	}
-	result, err := c.service.PostConfiguration(r.Context(), configurationParam)
-	// If an error occurred, encode the error with the status code
-	if err != nil {
-		c.errorHandler(w, r, err, &result)
-		return
-	}
-	// If no error, encode the body and the result code
-	EncodeJSONResponse(result.Body, &result.Code, w)
-}
-
-// PutConfigurationById - Updates a configuration
-func (c *ConfigurationAPIController) PutConfigurationById(w http.ResponseWriter, r *http.Request) {
-	params := mux.Vars(r)
-	configIdParam, err := parseNumericParameter[int64](
-		params["config-id"],
-		WithRequire[int64](parseInt64),
-	)
-	if err != nil {
-		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
-		return
-	}
-	configurationParam := Configuration{}
-	d := json.NewDecoder(r.Body)
-	d.DisallowUnknownFields()
-	if err := d.Decode(&configurationParam); err != nil && !errors.Is(err, io.EOF) {
-		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
-		return
-	}
-	if err := AssertConfigurationRequired(configurationParam); err != nil {
-		c.errorHandler(w, r, err, nil)
-		return
-	}
-	if err := AssertConfigurationConstraints(configurationParam); err != nil {
-		c.errorHandler(w, r, err, nil)
-		return
-	}
-	result, err := c.service.PutConfigurationById(r.Context(), configIdParam, configurationParam)
+	result, err := c.service.PutConfiguration(r.Context(), configurationParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		c.errorHandler(w, r, err, &result)
